two new window: 1) LastAction 2) Login
added a layer to the api for the history table

new controller, entities and repository (history)

--- a/PrototypeBankSystem.Presentation/View/IssuanceOfCredit.xaml
+++ b/PrototypeBankSystem.Presentation/View/IssuanceOfCredit.xaml
@@ -226,7 +226,7 @@
                     Width="Auto"
                     Height="Auto"
                     Margin="100 10"
-                    Command="{Binding ExitMain}"/>
+                    Command="{Binding ExitMain}" Cursor="Hand"/>
         </StackPanel>
     </Grid>
 </Window>
