--- a/PrototypeBankSystem.Presentation/View/ManagmentClient.xaml
+++ b/PrototypeBankSystem.Presentation/View/ManagmentClient.xaml
@@ -21,25 +21,12 @@
         </Grid.ColumnDefinitions>
         <Grid.RowDefinitions>
             <RowDefinition Height="auto"/>
-            <RowDefinition Height="auto"/>
             <RowDefinition Height="*"/>
             <RowDefinition Height="auto"/>
             <RowDefinition Height="auto"/>
         </Grid.RowDefinitions>
 
-        <StackPanel Orientation="Vertical"
-                    Grid.ColumnSpan="2"
-                    Grid.Row="1"
-                    Margin="20 10"
-                    HorizontalAlignment="Left"
-                    VerticalAlignment="Center">
-            <TextBox    materialDesign:HintAssist.Hint="Поиск"
-                        Style="{StaticResource MaterialDesignDataGridTextColumnEditingStyle}"
-                        Margin="0 5"
-                        Height="25"
-                        Width="150"
-                        Text="{Binding TextSearch}" Cursor="IBeam"/>
-        </StackPanel>
+       
 
         <StackPanel Orientation="Vertical"
                     Grid.ColumnSpan="2"
@@ -58,7 +45,7 @@
         </StackPanel>
 
         <DataGrid 
-            Grid.Row="2"
+            Grid.Row="1"
             Grid.ColumnSpan="2"
             HorizontalAlignment="Center"
             AutoGenerateColumns="False"
@@ -75,7 +62,7 @@
             </DataGrid.Columns>
         </DataGrid>
 
-        <StackPanel Grid.Row="3"
+        <StackPanel Grid.Row="2"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Top"
                     Margin="10 10 10 10">
@@ -107,7 +94,7 @@
         </StackPanel>
         
         <StackPanel Grid.Column="1"
-                    Grid.Row="3"
+                    Grid.Row="2"
                     HorizontalAlignment="Center"
                     VerticalAlignment="Center"
                     Margin="10">
@@ -134,7 +121,7 @@
                     Style="{StaticResource MaterialDesignFlatButton}" Foreground="#FF673AB7"
                     Width="Auto"
                     Height="Auto" Margin="100 0"
-                    Command="{Binding SaveAndExit}"/>
+                    Command="{Binding SaveAndExit}" Cursor="Hand"/>
             <Button Content="Выйти в главное меню"
                     Style="{StaticResource MaterialDesignFlatButton}" Foreground="#FFB73A51"
                     Width="Auto"
